parser/CParser.py
# Generated from C.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class CParser ( Parser ):

    grammarFileName = "C.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'['", "']'", "','", "'++'", 
                     "'--'", "'*'", "'+'", "'-'", "'!'", "'/'", "'%'", "'<'", 
                     "'>'", "'<='", "'>='", "'=='", "'!='", "'&&'", "'||'", 
                     "'?'", "':'", "'='", "'*='", "'/='", "'%='", "'+='", 
                     "'-='", "'...'", "'{'", "'}'", "',}'", "'#include <stdio.h>'", 
                     "'char'", "'int'", "'double'", "'float'", "'void'", 
                     "'if'", "'else'", "'for'", "'goto'", "'while'", "'switch'", 
                     "'break'", "'default'", "'continue'", "'return'", "'case'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "IncludeStdIO", "Char", 
                      "Int", "Double", "Float", "Void", "If", "Else", "For", 
                      "Goto", "While", "Switch", "Break", "Default", "Continue", 
                      "Return", "Case", "Identifier", "ConstantInt", "ConstantFloat", 
                      "ConstantChar", "StringLiteral", "BlockComment", "LineComment", 
                      "WS", "EOS" ]

    RULE_compilationUnit = 0
    RULE_primaryExpression = 1
    RULE_postfixExpression = 2
    RULE_unaryExpression = 3
    RULE_castExpression = 4
    RULE_multiplicativeExpression = 5
    RULE_additiveExpression = 6
    RULE_relationalExpression = 7
    RULE_equalityExpression = 8
    RULE_logicalExpression = 9
    RULE_conditionalExpression = 10
    RULE_assignmentExpression = 11
    RULE_expression = 12
    RULE_constantExpression = 13
    RULE_declaration = 14
    RULE_declarationSpecifiers = 15
    RULE_initDeclaratorList = 16
    RULE_initDeclarator = 17
    RULE_typeSpecifier = 18
    RULE_specifierQualifierList = 19
    RULE_declarator = 20
    RULE_directDeclarator = 21
    RULE_pointer = 22
    RULE_parameterTypeList = 23
    RULE_parameterList = 24
    RULE_parameterDeclaration = 25
    RULE_typeName = 26
    RULE_initializer = 27
    RULE_initializerList = 28
    RULE_statement = 29
    RULE_labeledStatement = 30
    RULE_compoundStatement = 31
    RULE_blockItemList = 32
    RULE_blockItem = 33
    RULE_expressionStatement = 34
    RULE_selectionStatement = 35
    RULE_iterationStatement = 36
    RULE_jumpStatement = 37
    RULE_functionDefinition = 38
    RULE_declarationList = 39

    ruleNames =  [ "compilationUnit", "primaryExpression", "postfixExpression", 
                   "unaryExpression", "castExpression", "multiplicativeExpression", 
                   "additiveExpression", "relationalExpression", "equalityExpression", 
                   "logicalExpression", "conditionalExpression", "assignmentExpression", 
                   "expression", "constantExpression", "declaration", "declarationSpecifiers", 
                   "initDeclaratorList", "initDeclarator", "typeSpecifier", 
                   "specifierQualifierList", "declarator", "directDeclarator", 
                   "pointer", "parameterTypeList", "parameterList", "parameterDeclaration", 
                   "typeName", "initializer", "initializerList", "statement", 
                   "labeledStatement", "compoundStatement", "blockItemList", 
                   "blockItem", "expressionStatement", "selectionStatement", 
                   "iterationStatement", "jumpStatement", "functionDefinition", 
                   "declarationList" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    IncludeStdIO=34
    Char=35
    Int=36
    Double=37
    Float=38
    Void=39
    If=40
    Else=41
    For=42
    Goto=43
    While=44
    Switch=45
    Break=46
    Default=47
    Continue=48
    Return=49
    Case=50
    Identifier=51
    ConstantInt=52
    ConstantFloat=53
    ConstantChar=54
    StringLiteral=55
    BlockComment=56
    LineComment=57
    WS=58
    EOS=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompilationUnitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CParser.EOF, 0)

        def IncludeStdIO(self):
            return self.getToken(CParser.IncludeStdIO, 0)

        def functionDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.FunctionDefinitionContext)
            else:
                return self.getTypedRuleContext(CParser.FunctionDefinitionContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(CParser.DeclarationContext,i)


        def getRuleIndex(self):
            return CParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)




    def compilationUnit(self):

        localctx = CParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CParser.IncludeStdIO:
                self.state = 80
                self.match(CParser.IncludeStdIO)


            self.state = 85 
            self._errHandler.sync(self)
            _alt = 1+1
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1+1:
                    self.state = 85
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        self.state = 83
                        self.functionDefinition()
                        pass

                    elif la_ == 2:
                        self.state = 84
                        self.declaration()
                        pass



                else:
                    raise NoViableAltException(self)
                self.state = 87 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 89
            self.match(CParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CParser.RULE_primaryExpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IdentifierContext(PrimaryExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.PrimaryExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(CParser.Identifier, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)


    class ConstantContext(PrimaryExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.PrimaryExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ConstantInt(self):
            return self.getToken(CParser.ConstantInt, 0)
        def ConstantFloat(self):
            return self.getToken(CParser.ConstantFloat, 0)
        def ConstantChar(self):
            return self.getToken(CParser.ConstantChar, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant" ):
                listener.enterConstant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant" ):
                listener.exitConstant(self)


    class StringLiteralContext(PrimaryExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.PrimaryExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def StringLiteral(self):
            return self.getToken(CParser.StringLiteral, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringLiteral" ):
                listener.enterStringLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringLiteral" ):
                listener.exitStringLiteral(self)


    class ParenExpressionContext(PrimaryExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.PrimaryExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(CParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenExpression" ):
                listener.enterParenExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenExpression" ):
                listener.exitParenExpression(self)



    def primaryExpression(self):

        localctx = CParser.PrimaryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_primaryExpression)
        self._la = 0 # Token type
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CParser.Identifier]:
                localctx = CParser.IdentifierContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.match(CParser.Identifier)
                pass
            elif token in [CParser.ConstantInt, CParser.ConstantFloat, CParser.ConstantChar]:
                localctx = CParser.ConstantContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CParser.ConstantInt) | (1 << CParser.ConstantFloat) | (1 << CParser.ConstantChar))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            elif token in [CParser.StringLiteral]:
                localctx = CParser.StringLiteralContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 93
                self.match(CParser.StringLiteral)
                pass
            elif token in [CParser.T__0]:
                localctx = CParser.ParenExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 94
                self.match(CParser.T__0)
                self.state = 95
                self.expression(0)
                self.state = 96
                self.match(CParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PostfixExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CParser.RULE_postfixExpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class FunctionCallContext(PostfixExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.PostfixExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def postfixExpression(self):
            return self.getTypedRuleContext(CParser.PostfixExpressionContext,0)

        def assignmentExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.AssignmentExpressionContext)
            else:
                return self.getTypedRuleContext(CParser.AssignmentExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)


    class PostfixPassthroughContext(PostfixExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.PostfixExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def primaryExpression(self):
            return self.getTypedRuleContext(CParser.PrimaryExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPostfixPassthrough" ):
                listener.enterPostfixPassthrough(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPostfixPassthrough" ):
                listener.exitPostfixPassthrough(self)


    class ArrayAccessContext(PostfixExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.PostfixExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def postfixExpression(self):
            return self.getTypedRuleContext(CParser.PostfixExpressionContext,0)

        def expression(self):
            return self.getTypedRuleContext(CParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayAccess" ):
                listener.enterArrayAccess(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayAccess" ):
                listener.exitArrayAccess(self)



    def postfixExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CParser.PostfixExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_postfixExpression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = CParser.PostfixPassthroughContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 101
            self.primaryExpression()
            self._ctx.stop = self._input.LT(-1)
            self.state = 123
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 121
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = CParser.ArrayAccessContext(self, CParser.PostfixExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfixExpression)
                        self.state = 103
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 104
                        self.match(CParser.T__2)
                        self.state = 105
                        self.expression(0)
                        self.state = 106
                        self.match(CParser.T__3)
                        pass

                    elif la_ == 2:
                        localctx = CParser.FunctionCallContext(self, CParser.PostfixExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfixExpression)
                        self.state = 108
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 109
                        self.match(CParser.T__0)
                        self.state = 111
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CParser.T__0) | (1 << CParser.T__5) | (1 << CParser.T__6) | (1 << CParser.T__7) | (1 << CParser.T__8) | (1 << CParser.T__9) | (1 << CParser.T__10) | (1 << CParser.Identifier) | (1 << CParser.ConstantInt) | (1 << CParser.ConstantFloat) | (1 << CParser.ConstantChar) | (1 << CParser.StringLiteral))) != 0):
                            self.state = 110
                            self.assignmentExpression()


                        self.state = 117
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==CParser.T__4:
                            self.state = 113
                            self.match(CParser.T__4)
                            self.state = 114
                            self.assignmentExpression()
                            self.state = 119
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 120
                        self.match(CParser.T__1)
                        pass

             
                self.state = 125
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class UnaryExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CParser.RULE_unaryExpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class PostfixDecrementContext(UnaryExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.UnaryExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def unaryExpression(self):
            return self.getTypedRuleContext(CParser.UnaryExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPostfixDecrement" ):
                listener.enterPostfixDecrement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPostfixDecrement" ):
                listener.exitPostfixDecrement(self)


    class IndirectionContext(UnaryExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.UnaryExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def castExpression(self):
            return self.getTypedRuleContext(CParser.CastExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndirection" ):
                listener.enterIndirection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndirection" ):
                listener.exitIndirection(self)


    class LogicalNotContext(UnaryExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.UnaryExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def castExpression(self):
            return self.getTypedRuleContext(CParser.CastExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalNot" ):
                listener.enterLogicalNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalNot" ):
                listener.exitLogicalNot(self)


    class PrefixIncrementContext(UnaryExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.UnaryExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def unaryExpression(self):
            return self.getTypedRuleContext(CParser.UnaryExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrefixIncrement" ):
                listener.enterPrefixIncrement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrefixIncrement" ):
                listener.exitPrefixIncrement(self)


    class UnaryPassthroughContext(UnaryExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.UnaryExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def postfixExpression(self):
            return self.getTypedRuleContext(CParser.PostfixExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryPassthrough" ):
                listener.enterUnaryPassthrough(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryPassthrough" ):
                listener.exitUnaryPassthrough(self)


    class UnaryPlusContext(UnaryExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.UnaryExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def castExpression(self):
            return self.getTypedRuleContext(CParser.CastExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryPlus" ):
                listener.enterUnaryPlus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryPlus" ):
                listener.exitUnaryPlus(self)


    class PostfixIncrementContext(UnaryExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.UnaryExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def unaryExpression(self):
            return self.getTypedRuleContext(CParser.UnaryExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPostfixIncrement" ):
                listener.enterPostfixIncrement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPostfixIncrement" ):
                listener.exitPostfixIncrement(self)


    class UnaryMinusContext(UnaryExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.UnaryExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def castExpression(self):
            return self.getTypedRuleContext(CParser.CastExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryMinus" ):
                listener.enterUnaryMinus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryMinus" ):
                listener.exitUnaryMinus(self)


    class PrefixDecrementContext(UnaryExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.UnaryExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def unaryExpression(self):
            return self.getTypedRuleContext(CParser.UnaryExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrefixDecrement" ):
                listener.enterPrefixDecrement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrefixDecrement" ):
                listener.exitPrefixDecrement(self)



    def unaryExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CParser.UnaryExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_unaryExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CParser.T__0, CParser.Identifier, CParser.ConstantInt, CParser.ConstantFloat, CParser.ConstantChar, CParser.StringLiteral]:
                localctx = CParser.UnaryPassthroughContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 127
                self.postfixExpression(0)
                pass
            elif token in [CParser.T__5]:
                localctx = CParser.PrefixIncrementContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 128
                self.match(CParser.T__5)
                self.state = 129
                self.unaryExpression(6)
                pass
            elif token in [CParser.T__6]:
                localctx = CParser.PrefixDecrementContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 130
                self.match(CParser.T__6)
                self.state = 131
                self.unaryExpression(5)
                pass
            elif token in [CParser.T__7]:
                localctx = CParser.IndirectionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 132
                self.match(CParser.T__7)
                self.state = 133
                self.castExpression()
                pass
            elif token in [CParser.T__8]:
                localctx = CParser.UnaryPlusContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 134
                self.match(CParser.T__8)
                self.state = 135
                self.castExpression()
                pass
            elif token in [CParser.T__9]:
                localctx = CParser.UnaryMinusContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 136
                self.match(CParser.T__9)
                self.state = 137
                self.castExpression()
                pass
            elif token in [CParser.T__10]:
                localctx = CParser.LogicalNotContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 138
                self.match(CParser.T__10)
                self.state = 139
                self.castExpression()
                pass
            else:
                raise NoViableAltException(self)
